--- a/k8s/slack-bughouse-service.yaml
+++ b/k8s/slack-bughouse-service.yaml
@@ -1,16 +1,27 @@
 apiVersion: v1
 kind: Service
 metadata:
-  creationTimestamp: null
+  creationTimestamp: 2018-08-21T20:22:03Z
   labels:
-    io.kompose.service: slack-bughouse
+    app: slack-bughouse
   name: slack-bughouse
+  namespace: default
+  resourceVersion: "30915"
+  selfLink: /api/v1/namespaces/default/services/slack-bughouse
+  uid: ddd25694-a57f-11e8-ad8b-42010a800fef
 spec:
+  clusterIP: 10.39.249.46
+  externalTrafficPolicy: Cluster
   ports:
-  - name: "9090"
-    port: 9090
+  - nodePort: 30747
+    port: 80
+    protocol: TCP
     targetPort: 9090
   selector:
-    io.kompose.service: slack-bughouse
+    app: slack-bughouse
+  sessionAffinity: None
+  type: LoadBalancer
 status:
-  loadBalancer: {}
+  loadBalancer:
+    ingress:
+    - ip: 35.194.42.4
